--- a/index.html
+++ b/index.html
@@ -109,6 +109,54 @@
   </div>
 </header>
 
+<!-- the phone section is missing -->
+
+<!-- whitespace -->
+<p class="whitespace">&nbsp;</p>
+<!-- / whitespace -->
+
+<!-- section 1 -->
+<section>
+  <div class="section-1-bg">
+    <div class="container">
+      <div class="row section-margin">
+        <div class="col-xs-6 col-md-6 section-img">
+          <img  class="img-responsive" src="img/mobile-czl.png" alt="">
+        </div>
+        <div class="col-xs-6 col-md-6 section-text">
+          <img class="icon-small" src="img/icon-1.svg" alt="">
+          <h4>Dic&#355;ionar juridic</h4>
+          <p>Construirea &#238;n parteneriat cu <span>Funky Citizens</span> a unei baze de date cu termeni explica&#355;i pe &#238;n&#355;elesul tuturor. Dic&#355;ionarul va fi disponibil  &#351;i &#238;n format text &#238;n care se pot opera c&#259;ut&#259;ri, dar va fi integrat și cu legisla&#355;ia, astfel &#238;ncât un utilizator care cite&#351;te textul unei legi poate accesa anumi&#355;i termeni (marca&#355;i in text/highlighted) pentru a-i vedea explica&#355;i pe larg &#238;n dic&#355;ionar. De asemenea dezvolt &#259;m un extension pentru Chrome si Mozilla, Firefox cu aceea &#351;i func&#355;ie.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- section 1 -->
+
+<div class="clear"></div>
+
+<!-- section 2 -->
+<section>
+  <div class="section-2-bg">
+    <div class="container">
+      <div class="row section-margin">
+        <div class="col-xs-6 col-md-6 section-text">
+          <img class="icon-small" src="img/icon-2.svg" alt="">
+          <h4>Tracker legislativ</h4>
+          <p>Prin intermediul platformei, utilizatorii vor avea acces la întregul flux legislativ aflat în dezbatere și la propunerile legislative.
+          Potrivit criteriilor lor de selecție setate în profil utilizatorii vor fi notificați cu privire la legislația aflat în dezbatere și în stadiul de propunere. Utilizatorii vor avea posibilitatea de a se abona la feed-uri care furnizează seturi de legi aflate în dezbatere și propuse, dar pot urmări și câte o singură inițiativă legislativă.</p>
+        </div>
+        <div class="col-xs-6 col-md-6 section-img">
+          <img  class="img-responsive" src="img/desktop-mobile-czl.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- section 2 -->
+
+<div class="clear"></div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
