--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,7 +43,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="javascript:void(0)">Despre</a></li>
-            <li><a href="javascript:void(0)">Func&#355;ionalit&#259;&#355;i</a></li>
+            <li><a href="javascript:void(0)">Funcționalități</a></li>
             <li><a href="javascript:void(0)">Echipa</a></li>
           </ul>
         </div>
@@ -75,18 +75,18 @@
             <div class="thumbnail">
               <img src="img/icon-1.svg" alt="">
               <div class="caption">
-                <h3>Dic&#355;ionar juridic</h3>
-                <p>extensie gratuit&#259;<br> pentru browser</p>
+                <h3>Dicționar juridic</h3>
+                <p>extensie gratuită<br> pentru browser</p>
               </div>
             </div>
           </div>
 
           <div class="col-xs-4 col-md-4">
             <div class="thumbnail">
-              <img src="img/icon-2.svg" alt="">
+              <img src="img/icon-2-1.svg" alt="">
               <div class="caption">
                 <h3>Tracker legislativ</h3>
-                <p>aplica&#355;ii pentru<br> iPhone &#351;i Android</p>
+                <p>aplicații pentru<br> iPhone și Android</p>
               </div>
             </div>
           </div>
@@ -95,8 +95,8 @@
             <div class="thumbnail">
               <img src="img/icon-3.svg" alt="">
               <div class="caption">
-                <h3>Legisla&#355;ia consolidat&#259;</h3>
-                <p>site &#351;i motor de c&#259;utare<br> pentru toat&#259; legisla&#355;ia</p>
+                <h3>Legislația consolidată</h3>
+                <p>site și motor de căutare<br> pentru toată legislația</p>
               </div>
             </div>
           </div>
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <p class="last-p-header">Un proiect al Code4.ro &#238;n parteneriat cu Va Urma  &#351;i Funky Citizens</p>
+    <p class="last-p-header">Un proiect al Code4.ro in parteneriat cu Va Urma si Funky Citizens</p>
 <!-- / thumbnails -->
   </div>
 </header>
@@ -112,51 +112,135 @@
 <!-- the phone section is missing -->
 
 <!-- whitespace -->
-<p class="whitespace">&nbsp;</p>
+<p class="whitespace"></p>
 <!-- / whitespace -->
 
 <!-- section 1 -->
-<section>
-  <div class="section-1-bg">
+<section class="section-1-bg">
     <div class="container">
       <div class="row section-margin">
-        <div class="col-xs-6 col-md-6 section-img">
-          <img  class="img-responsive" src="img/mobile-czl.png" alt="">
+        <div class="col-xs-6 col-md-6">
+          <div class="section-img">
+            <img  class="img-responsive" src="img/mobile-czl.png" alt="">
+          </div>
         </div>
         <div class="col-xs-6 col-md-6 section-text">
           <img class="icon-small" src="img/icon-1.svg" alt="">
-          <h4>Dic&#355;ionar juridic</h4>
-          <p>Construirea &#238;n parteneriat cu <span>Funky Citizens</span> a unei baze de date cu termeni explica&#355;i pe &#238;n&#355;elesul tuturor. Dic&#355;ionarul va fi disponibil  &#351;i &#238;n format text &#238;n care se pot opera c&#259;ut&#259;ri, dar va fi integrat și cu legisla&#355;ia, astfel &#238;ncât un utilizator care cite&#351;te textul unei legi poate accesa anumi&#355;i termeni (marca&#355;i in text/highlighted) pentru a-i vedea explica&#355;i pe larg &#238;n dic&#355;ionar. De asemenea dezvolt &#259;m un extension pentru Chrome si Mozilla, Firefox cu aceea &#351;i func&#355;ie.</p>
+          <h4>Dicționar juridic</h4>
+          <p>Construirea în parteneriat cu Funky Citizens a unei baze de date cu termeni explicați pe înțelesul tuturor. Dicționarul va fi disponibil și în format text în care se pot opera căutări, dar va fi integrat și cu legislația, astfel încât un utilizator care citește textul unei legi poate accesa anumiți termeni (marcati in text/highlighted) pentru a-i vedea explicați pe larg în dicționar. De asemenea dezvoltăm un extension pentru Chrome si Mozilla, Firefox cu aceeași funcție.</p>
         </div>
       </div>
     </div>
-  </div>
 </section>
 <!-- section 1 -->
 
 <div class="clear"></div>
 
 <!-- section 2 -->
-<section>
-  <div class="section-2-bg">
+<section class="section-2-bg">
     <div class="container">
       <div class="row section-margin">
         <div class="col-xs-6 col-md-6 section-text">
-          <img class="icon-small" src="img/icon-2.svg" alt="">
+          <img class="icon-small" src="img/icon-2-2.svg" alt="">
           <h4>Tracker legislativ</h4>
           <p>Prin intermediul platformei, utilizatorii vor avea acces la întregul flux legislativ aflat în dezbatere și la propunerile legislative.
           Potrivit criteriilor lor de selecție setate în profil utilizatorii vor fi notificați cu privire la legislația aflat în dezbatere și în stadiul de propunere. Utilizatorii vor avea posibilitatea de a se abona la feed-uri care furnizează seturi de legi aflate în dezbatere și propuse, dar pot urmări și câte o singură inițiativă legislativă.</p>
         </div>
-        <div class="col-xs-6 col-md-6 section-img">
-          <img  class="img-responsive" src="img/desktop-mobile-czl.png" alt="">
+
+        <div class="col-xs-6 col-md-6">
+          <div class="section-img">
+           <img  class="img-responsive" src="img/desktop-mobile-czl.png" alt="">
+          </div>
         </div>
       </div>
     </div>
-  </div>
 </section>
 <!-- section 2 -->
 
+<!-- section 3 -->
+<section class="section-3-bg">
+    <div class="container">
+      <div class="row section-margin">
+        <div class="col-xs-6 col-md-6">
+          <div class="section-img">
+            <img  class="img-responsive" src="img/desktop-big-czl.png" alt="">
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-6 section-text">
+          <img class="icon-small" src="img/icon-3.svg" alt="">
+          <h4>Legislația consolidată</h4>
+          <p>Utilizatorii platformei vor avea acces la legislația consolidată din cateva domenii de interes larg. Ultilizatorii își pot crea un profil în care au posibilitatea de a urmări aceste domenii predefinite. Setarea acestui profil se traduce printr-o serie de alerte pe care le va primi în platformă atunci când se aduc modificări legilor cuprinse în domeniile sale de interes. Vor fi centralizate și comentarii ale specialiștilor asupra legislatiei din domeniile prezentate.</p>
+        </div>
+      </div>
+    </div>
+</section>
+<!-- section 3 -->
+
 <div class="clear"></div>
+
+<!-- section 4 -->
+<section class="form">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <form action="" role="form">
+          <div class="form-group">
+            <div class="col-md-6 form-layout">
+              <input class="form-control" type="text" placeholder="Nume">   
+            </div>
+            <div class="col-md-6 form-layout">
+              <input class="form-control" type="text"  id="firstName" placeholder="Prenume">   
+            </div>
+          </div>
+  
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Email">
+          </div>
+
+          <div class="form-group">
+            <textarea class="form-control" rows="3"></textarea>
+          </div>
+  
+          <button class="btn btn-block btn-custom">Trimite</button>
+        </form>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+</section>
+<!-- section 4 -->
+
+<!-- footer -->
+<footer>
+  <div class="container">
+    <div class="row text-center">
+      <div class="social-media">
+        <a href="#"><img src="img/instagram.png" alt=""></a>
+        <a href="#"><img src="img/facebook.png" alt=""></a>
+        <a href="#"><img src="img/linkedIn.png" alt=""></a>
+      </div>
+
+      <div class="brand-logo">
+        <p><img src="img/czl-logo.svg" alt="">Ce Zice Legea</p>
+      </div>
+
+      <form action="" role="form">
+        <div class="col-md-4 col-md-offset-4 form-group">
+          <label for="letMeKnow">Anunță-mă când apar noutăti!</label>
+          <input class="form-control" type="email" placeholder="email">
+        </div>
+      </form>
+
+      <div class="clear"></div>
+      <p class="last-p-header">Un proiect al Code4.ro in parteneriat cu Va Urma si Funky Citizens</p>
+      
+      <p><img src="img/code-for-romania.png" alt=""><br> © 2017 Code for Romania.<br> Organizație neguvernamentală independentă, neafiliată politic și apolitică.</p>
+
+    </div>
+  </div>
+</footer>
+<!-- footer -->
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
