--- a/index.html
+++ b/index.html
@@ -227,15 +227,18 @@
 
       <form action="" role="form">
         <div class="col-md-4 col-md-offset-4 form-group">
-          <label for="letMeKnow">Anunță-mă când apar noutăti!</label>
-          <input class="form-control" type="email" placeholder="email">
+          <label class="label-text" for="letMeKnow">Anunță-mă când apar noutăti!</label>
+          <span class="form-line-separator"></span>
+          <input class="form-control form-custom" id="letMeKnow" type="email" placeholder="email">
         </div>
       </form>
 
       <div class="clear"></div>
-      <p class="last-p-header">Un proiect al Code4.ro in parteneriat cu Va Urma si Funky Citizens</p>
+      <p class="last-p-header footer-text">Un proiect al <span>Code4.ro</span> in parteneriat cu <span>Va Urma</span> si <span>Funky Citizens</span></p>
       
-      <p><img src="img/code-for-romania.png" alt=""><br> © 2017 Code for Romania.<br> Organizație neguvernamentală independentă, neafiliată politic și apolitică.</p>
+      <div class="copyright-text"> 
+        <p><img src="img/code-for-romania.png" alt=""><br> &copy;2017 Code for Romania.<br> Organizație neguvernamentală independentă, neafiliată politic și apolitică.</p>
+      </div>
 
     </div>
   </div>
