--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <p class="last-p-header">Un proiect al Code4.ro in parteneriat cu Va Urma si Funky Citizens</p>
+    <p class="last-p-header">Un proiect al Code4.ro în parteneriat cu Va Urma și Funky Citizens</p>
 <!-- / thumbnails -->
   </div>
 </header>
@@ -127,7 +127,7 @@
         <div class="col-xs-6 col-md-6 section-text">
           <img class="icon-small" src="img/icon-1.svg" alt="">
           <h4>Dicționar juridic</h4>
-          <p>Construirea în parteneriat cu Funky Citizens a unei baze de date cu termeni explicați pe înțelesul tuturor. Dicționarul va fi disponibil și în format text în care se pot opera căutări, dar va fi integrat și cu legislația, astfel încât un utilizator care citește textul unei legi poate accesa anumiți termeni (marcati in text/highlighted) pentru a-i vedea explicați pe larg în dicționar. De asemenea dezvoltăm un extension pentru Chrome si Mozilla, Firefox cu aceeași funcție.</p>
+          <p>Construirea în parteneriat cu Funky Citizens a unei baze de date cu termeni explicați pe înțelesul tuturor. Dicționarul va fi disponibil și în format text în care se pot opera căutări, dar va fi integrat și cu legislația, astfel încât un utilizator care citește textul unei legi poate accesa anumiți termeni (marcați în text/highlighted) pentru a-i vedea explicați pe larg în dicționar. De asemenea dezvoltăm un extension pentru Chrome și Mozilla Firefox cu aceeași funcție.</p>
         </div>
       </div>
     </div>
@@ -144,7 +144,7 @@
           <img class="icon-small" src="img/icon-2-2.svg" alt="">
           <h4>Tracker legislativ</h4>
           <p>Prin intermediul platformei, utilizatorii vor avea acces la întregul flux legislativ aflat în dezbatere și la propunerile legislative.
-          Potrivit criteriilor lor de selecție setate în profil utilizatorii vor fi notificați cu privire la legislația aflat în dezbatere și în stadiul de propunere. Utilizatorii vor avea posibilitatea de a se abona la feed-uri care furnizează seturi de legi aflate în dezbatere și propuse, dar pot urmări și câte o singură inițiativă legislativă.</p>
+          Potrivit criteriilor lor de selecție setate în profil utilizatorii vor fi notificați cu privire la legislația aflată în dezbatere și în stadiul de propunere. Utilizatorii vor avea posibilitatea de a se abona la feed-uri care furnizează seturi de legi aflate în dezbatere și propuse, dar pot urmări și câte o singură inițiativă legislativă.</p>
         </div>
 
         <div class="col-xs-6 col-md-6">
@@ -187,13 +187,13 @@
         <form action="" role="form">
           <div class="form-group">
             <div class="col-md-6 form-layout">
-              <input class="form-control" type="text" placeholder="Nume">   
+              <input class="form-control" type="text" placeholder="Nume">
             </div>
             <div class="col-md-6 form-layout">
-              <input class="form-control" type="text"  id="firstName" placeholder="Prenume">   
+              <input class="form-control" type="text"  id="firstName" placeholder="Prenume">
             </div>
           </div>
-  
+
           <div class="form-group">
             <input type="email" class="form-control" placeholder="Email">
           </div>
@@ -201,7 +201,7 @@
           <div class="form-group">
             <textarea class="form-control" rows="3"></textarea>
           </div>
-  
+
           <button class="btn btn-block btn-custom">Trimite</button>
         </form>
       </div>
@@ -234,9 +234,9 @@
       </form>
 
       <div class="clear"></div>
-      <p class="last-p-header footer-text">Un proiect al <span>Code4.ro</span> in parteneriat cu <span>Va Urma</span> si <span>Funky Citizens</span></p>
-      
-      <div class="copyright-text"> 
+      <p class="last-p-header footer-text">Un proiect al <span>Code4.ro</span> în parteneriat cu <span>Va Urma</span> si <span>Funky Citizens</span></p>
+
+      <div class="copyright-text">
         <p><img src="img/code-for-romania.png" alt=""><br> &copy;2017 Code for Romania.<br> Organizație neguvernamentală independentă, neafiliată politic și apolitică.</p>
       </div>
 
