Refactored the footer
The problem had a problem causing the page to spread excessively to the right. We fixed that, and on the way we made the footer a bit more mobile-friendly.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <p class="whitespace"></p>
 <!-- / whitespace -->
 
+
 <!-- section 1 -->
 <section class="section-1-bg">
     <div class="container">
@@ -214,32 +215,50 @@
 <!-- footer -->
 <footer>
   <div class="container">
-    <div class="row text-center">
-      <div class="social-media">
-        <a href="#"><img src="img/instagram.png" alt=""></a>
-        <a href="#"><img src="img/facebook.png" alt=""></a>
-        <a href="#"><img src="img/linkedIn.png" alt=""></a>
+    <div class="row text-center czl-row-eq-height">
+      <div class="col-md-4 czl-flex-center"></div>
+      <div class="col-md-4 czl-flex-center">
+          <div id="brand-footer"><img src="img/czl-logo.svg" alt="">Ce Zice Legea</div>
       </div>
-
-      <div class="brand-logo">
-        <p><img src="img/czl-logo.svg" alt="">Ce Zice Legea</p>
+      <div class="col-md-4 czl-flex-center">
+          <div>
+            <a href="#"><img class="social-media-icon" src="img/instagram.png" alt=""></a>
+            <a href="#"><img class="social-media-icon" src="img/facebook.png" alt=""></a>
+            <a href="#"><img class="social-media-icon" src="img/linkedIn.png" alt=""></a>
+          </div>
       </div>
-
-      <form action="" role="form">
-        <div class="col-md-4 col-md-offset-4 form-group">
-          <label class="label-text" for="letMeKnow">Anunță-mă când apar noutăti!</label>
-          <span class="form-line-separator"></span>
-          <input class="form-control form-custom" id="letMeKnow" type="email" placeholder="email">
+    </div>
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <form action="" role="form" class="czl-form">
+          <label for="letMeKnow">Anunță-mă când apar noutăti!</label>
+          <div class="input-group">
+            <input class="form-control" id="letMeKnow" type="email" placeholder="email">
+            <span class="input-group-addon input-group-addon-czl-email"></span>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        Un proiect al <b>Code4.ro</b> în parteneriat cu <b>Va Urma</b> și
+        <b>Funky Citizens</b>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <div id="copyright-footer">
+          <img src="img/code-for-romania.png" alt="">
+          <p>&copy;2017 Code for Romania.<br/>Organizație neguvernamentală
+          independentă, neafiliată politic și apolitică.</p>
         </div>
-      </form>
-
-      <div class="clear"></div>
-      <p class="last-p-header footer-text">Un proiect al <span>Code4.ro</span> în parteneriat cu <span>Va Urma</span> si <span>Funky Citizens</span></p>
-
-      <div class="copyright-text">
-        <p><img src="img/code-for-romania.png" alt=""><br> &copy;2017 Code for Romania.<br> Organizație neguvernamentală independentă, neafiliată politic și apolitică.</p>
       </div>
-
+      <div class="col-md-3"></div>
     </div>
   </div>
 </footer>
