Improve footer social media icons on mobile
Also: added Fontello icons.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" type="text/css" rel="stylesheet">
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700,800,900" rel="stylesheet">
 
@@ -220,12 +221,10 @@
       <div class="col-md-4 czl-flex-center">
           <div id="brand-footer"><img src="img/czl-logo.svg" alt="">Ce Zice Legea</div>
       </div>
-      <div class="col-md-4 czl-flex-center">
-          <div>
-            <a href="#"><img class="social-media-icon" src="img/instagram.png" alt=""></a>
-            <a href="#"><img class="social-media-icon" src="img/facebook.png" alt=""></a>
-            <a href="#"><img class="social-media-icon" src="img/linkedIn.png" alt=""></a>
-          </div>
+      <div class="col-md-4 czl-flex-center czl-social-media-container">
+          <a href="#"><div class="social-media-icon"><i class="fa fa-instagram"></i></div></a>
+          <a href="https://www.facebook.com/code4romania/"><div class="social-media-icon"><i class="fa fa-facebook "></i></div></a>
+          <a href="#"><div class="social-media-icon"><i class="fa fa-linkedin"></i></div></a>
       </div>
     </div>
     <div class="row">
@@ -244,8 +243,8 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
-        Un proiect al <b>Code4.ro</b> în parteneriat cu <b>Va Urma</b> și
-        <b>Funky Citizens</b>
+        Un proiect al <a href="https://www.code4.ro"><b>Code4.ro</b></a> în parteneriat cu <a href="https://vaurma.ro"><b>Va Urma</b></a> și
+        <a href="https://www.funky.ong"><b>Funky Citizens</b></a>
       </div>
       <div class="col-md-2"></div>
     </div>
